--- a/five.html
+++ b/five.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="w-1190 head">
-        <a href="one.html"><img src="./images/logo.png" class="head-logo"></a>
+        <a href="index.html"><img src="./images/logo.png" class="head-logo"></a>
         <ul class="head-list">
             <li><a href="two.html">Services</a></li>
             <li><a href=".three.html">Gallery</a></li>
@@ -26,7 +26,7 @@
             <input type="text" class="Touch-inp">
             <p class="Touch-title">Phone:</p>
             <input type="text" class="Touch-inp">
-            <p class="Touch-title">Message:</p> 
+            <p class="Touch-title">Message:</p>
             <textarea class="Touch-textarea"></textarea>
             <p class="Touch-btn"><button>Submit</button></p>
         </div>
