--- a/four.html
+++ b/four.html
@@ -88,10 +88,11 @@
         <p class="site-txt"><a href="five.html">Get in Touch!</a></p>
     </div>
     <div class="w-1190 footer">
-        <img src="./images/footer01.png">
-        <img src="./images/footer02.png">
-        <img src="./images/footer03.png">
-        <img src="./images/footer04.png">
+        <a href="https://www.instagram.com/HalcyonMassageandWellnessLLC/"
+         target="view_window"><img src="./images/footer01.png"></a>
+        <a href="https://www.yelp.com/biz/halcyon-massage-and-wellness-waltham"><img src="./images/footer02.png"></a>
+        <a href="https://www.facebook.com/Halcyon-Massage-and-Wellness-2188791494768644/"><img src="./images/footer03.png"></a>
+        <a href="https://twitter.com/HalcyonAnd"><img src="./images/footer04.png"></a>
     </div>
 </body>
 
