--- a/two.html
+++ b/two.html
@@ -13,8 +13,8 @@
         <a href="./index.html"><img src="./images/logo.png" class="head-logo"></a>
         <ul class="head-list">
             <li class="active-head"><a href="./two.html">Services</a></li>
-            <li><a href="./three.html">Gallery</a></li>
-            <li><a href="/four.html">About</a></li>
+            <li class="active-head"><a href="./three.html">Gallery</a></li>
+            <li class="active-head"><a href="/four.html">About</a></li>
         </ul>
     </div>
     <div class="w-1190">
