--- a/four.html
+++ b/four.html
@@ -12,9 +12,9 @@
     <div class="w-1190 head">
         <a href="index.html"><img src="./images/logo.png" class="head-logo"></a>
         <ul class="head-list">
-            <li><a href="two.html">Services</a></li>
-            <li><a href=".three.html">Gallery</a></li>
-            <li><a href="four.html">About</a></li>
+            <li><a href="/two.html">Services</a></li>
+            <li><a href="/three.html">Gallery</a></li>
+            <li><a href="/four.html">About</a></li>
         </ul>
     </div>
     <div class="w-1190">
