--- a/three.html
+++ b/three.html
@@ -13,7 +13,7 @@
         <a href="index.html"><img src="./images/logo.png" class="head-logo"></a>
         <ul class="head-list">
             <li><a href="two.html">Services</a></li>
-            <li class="active-head"><a href="three.html">Gallery</a></li>
+            <li><a href="three.html">Gallery</a></li>
             <li><a href="four.html">About</a></li>
         </ul>
     </div>
