--- a/four.html
+++ b/four.html
@@ -14,7 +14,7 @@
         <ul class="head-list">
             <li><a href="/two.html">Services</a></li>
             <li><a href="/three.html">Gallery</a></li>
-            <li><a href="/four.html">About</a></li>
+            <li  class="active-head"><a href="/four.html">About</a></li>
         </ul>
     </div>
     <div class="w-1190">
